添加jQuery、默认样式表、重写样式表、图表、轮播图，删除字体测试。

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/bubbles.css">
+    <link rel="stylesheet" href="css/slideshow.css">
+    <script src="js/jquery.js"></script>
+    <script src="js/slideshow.js"></script>
+
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">-->
 </head>
 <body>
 <h3>导航栏</h3>
@@ -215,61 +222,6 @@
     medical advice for patients with hypertension and diabetes.
 </p>
 <br>
-<h3>字体测试</h3>
-<p>以下所有段落字号均为18px。</p>
-<p class="c">Comfortaa : In this project, we combined strongly specific nanobodies with high-sensitivity liquid crystal
-    detection to develop a visual detection method, thereby enabling accurate quantification or semiquantification of
-    microgram-levelU-
-    β<sub>2</sub>M. Firstly, we use nanobody to specifically bind to β<sub>2</sub>M. Compared with conventional
-    antibodies, nanobody is a smaller molecular,less susceptible to denaturation, but still has intact antigen binding
-    properties. In addition, nanobodies can be expressed by <i>E. coli</i> , which make the cost of production is
-    greatly reduced. What's more, we use the birefringence of liquid crystal molecules. The liquid crystal application
-    that we are familiar with is liquid 3Cu+8HNO<sub>3</sub>=3Cu(NO<sub>3</sub>)<sub>2</sub>+2NO+4H<sub>2</sub>O crystal
-    display, but this is to change the arrangement of the liquid crystal
-    molecules through the electric current, thus show different light signals. Here, we modify the liquid crystal cell
-    substrate with antibodies. After combining antigens, the micro-environment of the liquid crystal cell platform
-    changes, resulting in a significant x<sup>2</sup>+y<sup>2</sup>=5 difference in color or brightness , the visualization of detection is achieved.
-</p>
-<p class="d">DidactGothic : In this project, we combined strongly specific nanobodies with high-sensitivity liquid
-    crystal detection to develop a visual detection method, thereby enabling accurate quantification or
-    semiquantification of microgram-levelU-
-    β<sub>2</sub>M. Firstly, we use nanobody to specifically bind to β<sub>2</sub>M. Compared with conventional
-    antibodies, nanobody is a smaller molecular,less susceptible to denaturation, but still has intact antigen binding
-    properties. In addition, nanobodies can be expressed by <i>E. coli</i> , which make the cost of production is
-    greatly reduced. What's more, we use the birefringence of liquid crystal molecules. The liquid crystal application
-    that we are familiar with is liquid 3Cu+8HNO<sub>3</sub>=3Cu(NO<sub>3</sub>)<sub>2</sub>+2NO+4H<sub>2</sub>O crystal
-    display, but this is to change the arrangement of the liquid crystal
-    molecules through the electric current, thus show different light signals. Here, we modify the liquid crystal cell
-    substrate with antibodies. After combining antigens, the micro-environment of the liquid crystal cell platform
-    changes, resulting in a significant x<sup>2</sup>+y<sup>2</sup>=5 difference in color or brightness , the visualization of detection is achieved.
-</p>
-<p class="g">GFSNeoHellenic : In this project, we combined strongly specific nanobodies with high-sensitivity liquid
-    crystal detection to develop a visual detection method, thereby enabling accurate quantification or
-    semiquantification of microgram-levelU-
-    β<sub>2</sub>M. Firstly, we use nanobody to specifically bind to β<sub>2</sub>M. Compared with conventional
-    antibodies, nanobody is a smaller molecular,less susceptible to denaturation, but still has intact antigen binding
-    properties. In addition, nanobodies can be expressed by <i>E. coli</i> , which make the cost of production is
-    greatly reduced. What's more, we use the birefringence of liquid crystal molecules. The liquid crystal application
-    that we are familiar with is liquid 3Cu+8HNO<sub>3</sub>=3Cu(NO<sub>3</sub>)<sub>2</sub>+2NO+4H<sub>2</sub>O crystal
-    display, but this is to change the arrangement of the liquid crystal
-    molecules through the electric current, thus show different light signals. Here, we modify the liquid crystal cell
-    substrate with antibodies. After combining antigens, the micro-environment of the liquid crystal cell platform
-    changes, resulting in a significant x<sup>2</sup>+y<sup>2</sup>=5 difference in color or brightness , the visualization of detection is achieved.
-</p>
-<p class="l">LatoLatin : In this project, we combined strongly specific nanobodies with high-sensitivity liquid crystal
-    detection to develop a visual detection method, thereby enabling accurate quantification or semiquantification of
-    microgram-levelU-
-    β<sub>2</sub>M. Firstly, we use nanobody to specifically bind to β<sub>2</sub>M. Compared with conventional
-    antibodies, nanobody is a smaller molecular,less susceptible to denaturation, but still has intact antigen binding
-    properties. In addition, nanobodies can be expressed by <i>E. coli</i> , which make the cost of production is
-    greatly reduced. What's more, we use the birefringence of liquid crystal molecules. The liquid crystal application
-    that we are familiar with is liquid 3Cu+8HNO<sub>3</sub>=3Cu(NO<sub>3</sub>)<sub>2</sub>+2NO+4H<sub>2</sub>O crystal
-    display, but this is to change the arrangement of the liquid crystal
-    molecules through the electric current, thus show different light signals. Here, we modify the liquid crystal cell
-    substrate with antibodies. After combining antigens, the micro-environment of the liquid crystal cell platform
-    changes, resulting in a significant x<sup>2</sup>+y<sup>2</sup>=5 difference in color or brightness , the visualization of detection is achieved.
-</p>
-<br>
 <h3>对话气泡</h3>
 <div style="width:800px;height: 600px;">
     <!-- container element for chat window -->
@@ -277,6 +229,7 @@
 
     <!-- import the JavaScript file -->
     <script src="js/bubbles.js"></script>
+    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/bubbles.js&action=raw&ctype=text/javascript"></script>-->
     <script>
         // conversation object stored in separate variable:
         var convo = {
@@ -474,6 +427,23 @@
             )
         }
     </script>
+</div>
+<br>
+<h3>图表</h3>
+<a href="http://www.chartjs.org/samples/latest/">http://www.chartjs.org/samples/latest/</a>
+<br>
+<h3>轮播图</h3>
+<div id="box">
+    <div id="box_img">
+        <ul></ul>
+    </div>
+    <div id="word">
+        <ul></ul>
+    </div>
+    <div id="controller">
+        <div id="backward"></div>
+        <div id="forward"></div>
+    </div>
 </div>
 </body>
 </html>
