更新首页顶部轮播图，修正对话气泡语法问题。

--- a/DescriptionPage.html
+++ b/DescriptionPage.html
@@ -64,29 +64,17 @@
             <div id="bodyContent">
                 <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr"><p>
 
+                    <html lang="en">
                     <head>
                         <meta charset="UTF-8">
                         <meta http-equiv="X-UA-Compatible" content="IE=edge">
                         <title>Description</title>
-                        <link rel="stylesheet" href="css/style.css">
-                        <link rel="stylesheet" href="css/nav.css">
-                        <link rel="stylesheet" href="css/bubbles.css">
-                        <link rel="stylesheet" href="css/slideshow.css">
-                        <link rel="stylesheet" href="css/fontawesome.css">
-                        <link rel="stylesheet" href="css/contents.css">
-                        <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
-                        <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">-->
-                        <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">-->
-                        <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
-                        <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">-->
-
-                        <script src="js/jquery.js"></script>
-                        <script src="js/slideshow.js"></script>
-                        <script src="js/bubbles.js"></script>
-                        <script src="js/typed.js"></script>
-                        <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/slideshow.js&action=raw&ctype=text/javascript"></script>-->
-                        <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/bubbles.js&action=raw&ctype=text/javascript"></script>-->
-                        <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/typed.js&action=raw&ctype=text/javascript"></script>-->
+                        <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">
+                        <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">
+                        <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">
+                        <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">
+                        <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">
+                        <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">
                     </head>
                     <body>
                     <div id="dlutb">
@@ -289,11 +277,9 @@
                 <p><i class="fab fa-weibo"></i> Weibo</p>
             </div>
             <div id="qrCode">
-                <div><img src="img/wechat.png" width="100"></div>
-                <!--http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--wechat.png-->
+                <div><img src="http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--wechat.png" width="100"></div>
                 <div></div>
-                <div><img src="img/weibo.png" width="100"></div>
-                <!--http://2018.igem.org/wiki/images/6/6b/T--DLUT_China_B--weibo.png-->
+                <div><img src="http://2018.igem.org/wiki/images/6/6b/T--DLUT_China_B--weibo.png" width="100"></div>
             </div>
         </div>
     </div>
@@ -302,8 +288,8 @@
         <i class="fas fa-angle-up"></i>
     </div>
 
-    <script src="js/script.js"></script>
-    <script src="js/contents.js"></script>
+    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>
+    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>
     <script>
         $(document).ready(function () {
             $(window).scroll(function () {
@@ -314,6 +300,10 @@
             });
         });
     </script>
+</div>
+</body>
+</html>
+
 </div>
 </body>
 
