--- a/TeamMembers.html
+++ b/TeamMembers.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/fontawesome.css">
-    <!--<link rel="stylesheet" href="css/slideshow.css">-->
+    <link rel="stylesheet" href="css/slideshow.css">
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
@@ -31,6 +31,10 @@
         </div>
         <br>
         <a class="btn" id="start">Get Started</a>
+    </div>
+
+    <div id="meetUs">
+        <p class="mainText">There is nothing here at the moment.</p>
     </div>
 
     <div id="footer">
