--- a/index.html
+++ b/index.html
@@ -4,26 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>2018 iGEM_DLUT_B</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="css/bubbles.css">
-    <link rel="stylesheet" href="css/fontawesome.css">
-    <link rel="stylesheet" href="css/slideshow.css">
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">-->
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">-->
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="css/style.css">-->
+    <!--<link rel="stylesheet" href="css/nav.css">-->
+    <!--<link rel="stylesheet" href="css/bubbles.css">-->
+    <!--<link rel="stylesheet" href="css/fontawesome.css">-->
+    <!--<link rel="stylesheet" href="css/slideshow.css">-->
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">
 
-    <script src="js/jquery.js"></script>
-    <script src="js/bubbles.js"></script>
-    <script src="js/slideshow.js"></script>
-    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/slideshow.js&action=raw&ctype=text/javascript"></script>-->
-    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/bubbles.js&action=raw&ctype=text/javascript"></script>-->
+    <!--<script src="js/jquery.js"></script>-->
+    <!--<script src="js/bubbles.js"></script>-->
+    <!--<script src="js/slideshow.js"></script>-->
+    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/slideshow.js&action=raw&ctype=text/javascript"></script>
+    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/bubbles.js&action=raw&ctype=text/javascript"></script>
 
     <script>
         function check() {
-            if ((navigator.userAgent.indexOf("compatible") > -1 && navigator.userAgent.indexOf("MSIE") > -1) || (navigator.userAgent.indexOf('Trident') > -1 && navigator.userAgent.indexOf("rv:11.0") > -1))
+            let a = false, b = false;
+            if (navigator.userAgent.indexOf("compatible") > -1)
+                if (navigator.userAgent.indexOf("MSIE") > -1)
+                    a = true;
+            if (navigator.userAgent.indexOf('Trident') > -1)
+                if (navigator.userAgent.indexOf("rv:11.0") > -1)
+                    b = true;
+            if (a || b)
                 alert('We are sorry but Microsoft Internet Explorer may be too old to display this page correctly.\nIt is recommended to update your browser, otherwise your experience may suffer.');
         }
     </script>
@@ -45,19 +52,14 @@
             <script>
                 let data = [
                     {
-                        "src": "http://2018.igem.org/wiki/images/2/29/T--DLUT_China_B--logo.png",
-                        "title": "DLUT China B Logo",
-                        "description": "DLUT China B Logo",
+                        "src": "http://2018.igem.org/wiki/images/1/1a/T--DLUT_China_B--Top1.jpg",
+                        "title": "DLUT China B",
+                        "description": "DLUT China B",
                     },
                     {
-                        "src": "http://2018.igem.org/wiki/images/9/96/T--DLUT_China_B--laboratory.jpg",
-                        "title": "Laboratory",
-                        "description": "Laboratory.",
-                    },
-                    {
-                        "src": "http://2018.igem.org/wiki/images/b/b6/T--DLUT_China_B--Clean_Bench.jpg",
-                        "title": "Clean Bench",
-                        "description": "Clean Bench.",
+                        "src": "http://2018.igem.org/wiki/images/0/04/T--DLUT_China_B--Top2.jpg",
+                        "title": "Principle",
+                        "description": "Principle.",
                     }
                 ];
                 $(document).ready(slideshow(data));
@@ -102,11 +104,11 @@
                 <p><i class="fab fa-weibo"></i> Weibo</p>
             </div>
             <div id="qrCode">
-                <div><img src="img/wechat.png" width="100"></div>
-                <!--<div><img src="http://2018.igem.org/wiki/images/c/c6/T&#45;&#45;DLUT_China_B&#45;&#45;wechat.png" width="100"></div>-->
+                <!--<div><img src="img/wechat.png" width="100"></div>-->
+                <div><img src="http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--wechat.png" width="100"></div>
                 <div></div>
-                <div><img src="img/weibo.png" width="100"></div>
-                <!--<div><img src="http://2018.igem.org/wiki/images/6/6b/T&#45;&#45;DLUT_China_B&#45;&#45;weibo.png" width="100"></div>-->
+                <!--<div><img src="img/weibo.png" width="100"></div>-->
+                <div><img src="http://2018.igem.org/wiki/images/6/6b/T--DLUT_China_B--weibo.png" width="100"></div>
             </div>
         </div>
     </div>
@@ -115,8 +117,8 @@
         <i class="fas fa-angle-up"></i>
     </div>
 
-    <script src="js/script.js"></script>
-    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>-->
+    <!--<script src="js/script.js"></script>-->
+    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>
     <script>
         /*对话气泡*/
         let conversation = {
@@ -133,7 +135,7 @@
                 says: [
                     "We have a lot of significant updates.（Of course we cannot make it as cool as  the Apple launch update)",
                     "As an old friend, let me open the VIP channel for you.",
-                    'Click "Skip", then you will skip the project Introduction section.',
+                    'Click "Skip", then you will skip the Project Introduction section.',
                     'Click "Listen", then you will acknowledge more details about our story.'
                 ],
                 reply: [
@@ -183,11 +185,11 @@
             "listen1": {
                 says: [
                     "Here is iGEM_DLUT_China_B.",
-                    "I'll introduce our project for you.",
-                    "We know that there are many diseases in the world that can be predicted and cured,",
-                    "and to achieve that, the first step is to understand the group of people which this disease prefers.",
-                    "For example, diabetic and hypertensive patients may suffer from chronic kidney disease.",
-                    "Older people over the age of 60 may be suffering from Alzheimer's disease."
+                    "I`ll introduce our project to you.",
+                    "Many diseases in the world severely threaten human health, but some of them can be predicted and cured.",
+                    "The first step to prevent disease is to figure out what kind of population may face higher risk.",
+                    "For example, diabetic and hypertensive patients are more likely to suffer from chronic kidney disease.",
+                    "People older than 60 are more likely to develop Alzheimer`s disease."
                 ],
                 reply: [
                     {
@@ -197,10 +199,10 @@
                 ]
             },
             "listen2": {
-                says: ["The second step is to have regular medical examination to intervene disease early to prevent its progression."],
+                says: ["The second step is to monitor regularly to intervene the occurrence and development of diseases timely."],
                 reply: [
                     {
-                        question: "Yes, it makes sense, but how can that be achieved?",
+                        question: "Yes, it makes sense. But how can it be achieved?",
                         answer: "listen3"
                     }
                 ]
@@ -208,8 +210,8 @@
             "listen3": {
                 says: [
                     "You may not believe that",
-                    "we can know our physical condition through the urine.",
-                    "Urine is regard as \"gold mine\" for the identification of disease markers."
+                    "we can know our current physical condition through urine.",
+                    "Urine is considered to be \"gold mine\" for the identification of disease markers."
                 ],
                 reply: [
                     {
@@ -220,18 +222,18 @@
             },
             "listen4": {
                 says: [
-                    "Absolutely, it's like a mirror that reflects one's health.",
-                    "In the early stages of the disease, we can use the protein markers in the urine to screen the disease."
+                    "Absolutely. It`s like a mirror that reflects one`s health.",
+                    "In the early stages of a disease, we can use the protein markers in the urine to screen the disease."
                 ],
                 reply: [
                     {
-                        question: "But how do you test it?",
+                        question: "But how do you screen it?",
                         answer: "listen5"
                     }
                 ]
             },
             "listen5": {
-                says: ["To be honest, we use a very tiny nano-antibody, and liquid crystal sensor to show reaction results for us."],
+                says: ["We use nano-antibody combining with liquid crystal sensor to show the results for us."],
                 reply: [
                     {
                         question: "Liquid crystal? How?",
@@ -241,15 +243,15 @@
             },
             "listen6": {
                 says: [
-                    "In our daily life, we usually see the LCD screen is black. However, it becomes colorful as it works.",
-                    "Our products are similar in principle.",
-                    "The combination of the nano-antibody and the protein in the urine resulted in a slight change in the liquid crystalline substrate.",
-                    "Changes in the brightness and color of the liquid crystal film,",
-                    "so the liquid crystal brightness can directly reflect the antigen concentration."
+                    "In our daily life, we usually find the LCD screen black. However, it becomes colorful when it works.",
+                    "Our products are similar to it in principle.",
+                    "The combination of the nano-antibody and the marked protein in urine will result in a slight change in the liquid crystalline substrate.",
+                    "It also causes changes in the brightness and color of the liquid crystal film.",
+                    "So the liquid crystal brightness can reflect the antigen concentration directly."
                 ],
                 reply: [
                     {
-                        question: "That means we can see directly how we are physically in the state.",
+                        question: "That means we can know whether we are sick and what extent the disease has progressed to.",
                         answer: "listen7"
                     }
                 ]
@@ -257,12 +259,12 @@
             "listen7": {
                 says: [
                     "Yes, but we need to do a more accurate quantitative analysis.",
-                    "We take photos, and then grayscale processing and analysis of the average gray value.",
-                    "This can correspond to the concentration-gray curve that we have reached, thus we can accurately obtain the content of the marker."
+                    "We take photos, then perform greyscale processing and analyze the average greyscale.",
+                    "In contrast to the concentration-gray curve we have obtained, we can obtain the concentration of the antigen accurately."
                 ],
                 reply: [
                     {
-                        question: "You did something amazing!",
+                        question: "You guys did something amazing!",
                         answer: "last"
                     }
                 ]
@@ -305,7 +307,7 @@
             },
             "projectIntroduction": {
                 says: [
-                    "Wow, you chose the project as the destination.",
+                    "Wow, you selected Project as the destination.",
                     "Are you ready to go?"
                 ],
                 reply: [
@@ -321,7 +323,7 @@
             },
             "parts": {
                 says: [
-                    "Didi, you are about to reach parts.",
+                    "Didi, you are about to reach Parts.",
                     "You will learn about the main components we use such as messages."
                 ],
                 reply: [
@@ -337,7 +339,7 @@
             },
             "model": {
                 says: [
-                    "Do you make the model as your destination?",
+                    "Have you decided to make Model as your destination?",
                     "Project optimization and results will be exhibited here."
                 ],
                 reply: [
@@ -346,18 +348,18 @@
                         answer: "goModel"
                     },
                     {
-                        question: "I want a different destination.",
+                        question: "I want another destination.",
                         answer: "dest"
                     }
                 ]
             },
             "awards": {
                 says: [
-                    "You will find the treasures of application designing at the awards office."
+                    "You will find the treasures of application design at Awards office."
                 ],
                 reply: [
                     {
-                        question: "Departure. (￣) ￣) ↗",
+                        question: "Go. (￣) ￣) ↗",
                         answer: "goAwards"
                     },
                     {
@@ -369,8 +371,8 @@
             "humanPractice": {
                 says: [
                     "We are committed to education and publicity.",
-                    "Choose \"Learn more\" and will arrive at the human practice.",
-                    "Choose \"Back\", you can re-select the destination."
+                    "Choose \"Learn more\" and you will arrive at Human Practice.",
+                    "Choose \"Back\", the destination will be reset."
                 ],
                 reply: [
                     {
@@ -385,9 +387,9 @@
             },
             "teamworkAndCooperation": {
                 says: [
-                    "Choose \"Learn more\" will lead to team introduction,",
-                    "and learn about team members and collaboration between teams.",
-                    "Choose \"Back\", you can re-select the destination."
+                    "Choose \"Learn more\", you will arrive at Team Introduction,",
+                    "and learn about our team members and our collaborations with other teams.",
+                    "Choose \"Back\", the destination will be reset."
                 ],
                 reply: [
                     {
@@ -426,7 +428,6 @@
             window.location.href = "http://2018.igem.org/Team:DLUT_China_B/AppliedDesign";
         };
         goHumanPractice = function () {
-            console.log('aa');
             window.location.href = "http://2018.igem.org/Team:DLUT_China_B/HumanPractice";
         };
         goTeamworkAndCooperation = function () {
@@ -436,21 +437,21 @@
         function isShow($el) {
             let winH = $(window).height(), /*获取窗口高度*/
                 scrollH = $(window).scrollTop(), /*获取窗口滚动高度*/
-                top = $el.offsetTop;
-            /*获取元素距离窗口顶部偏移高度*/
+                top = $el.offsetTop; /*获取元素距离窗口顶部偏移高度*/
             return top < scrollH + winH;
         }
 
         let chatWindow;
 
         function lazyLoad() {
-            if (document.getElementById("chat") == null && isShow(document.getElementById("chatBubbles"))) {
-                let chat = document.createElement("div");
-                chat.setAttribute("id", "chat");
-                document.getElementById("chatBubbles").appendChild(chat);
-                chatWindow = new Bubbles(document.getElementById("chat"), "chatWindow");
-                chatWindow.talk(conversation);
-            }
+            if (document.getElementById("chat") == null)
+                if (isShow(document.getElementById("chatBubbles"))) {
+                    let chat = document.createElement("div");
+                    chat.setAttribute("id", "chat");
+                    document.getElementById("chatBubbles").appendChild(chat);
+                    chatWindow = new Bubbles(document.getElementById("chat"), "chatWindow");
+                    chatWindow.talk(conversation);
+                }
         }
 
         $(document).ready(function () {
