向TeamMembers页增加内容。

--- a/TeamMembers.html
+++ b/TeamMembers.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/fontawesome.css">
-    <link rel="stylesheet" href="css/slideshow.css">
+    <!--<link rel="stylesheet" href="css/slideshow.css">-->
+    <link rel="stylesheet" href="css/team.css">
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">-->
 
     <script src="js/jquery.js"></script>
-    <script src="js/typed.js"></script>
+    <!--<script src="js/typed.js"></script>-->
     <!--<script src="js/slideshow.js"></script>-->
     <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/slideshow.js&action=raw&ctype=text/javascript"></script>-->
     <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/typed.js&action=raw&ctype=text/javascript"></script>-->
@@ -26,15 +27,91 @@
         <div id="nav"></div>
         <br>
         <div class="title" id="teamName">DLUT China B</div>
-        <div id="typed">
-            <span id="slogan"></span>
-        </div>
+        <div id="ourTeam">Our Team</div>
         <br>
         <a class="btn" id="start">Get Started</a>
     </div>
 
-    <div id="meetUs">
-        <p class="mainText">There is nothing here at the moment.</p>
+    <div id="meetUs" class="mainText">
+        <div id="students">
+            <div class="tr">
+                <div class="td"></div>
+                <div class="td" id="img1">
+                    <img src="img/Team/14.jpg">
+                    <div id="part1"><div class="intro"><p>Intro1</p></div></div>
+                    <div id="part2"><div class="intro"><p>Intro2</p></div></div>
+                </div>
+                <div class="td"></div>
+            </div>
+            <div class="tr">
+                <div class="td" id="img2"><img src="img/Team/6.jpg"><div class="intro"><p>Intro3</p></div></div>
+                <div class="td"></div>
+                <div class="td" id="img3"><img src="img/Team/7.jpg"><div class="intro"><p>Intro4</p></div></div>
+            </div>
+            <div class="tr">
+                <div class="td"></div>
+                <div class="td" id="img4">
+                    <img src="img/Team/17.jpg">
+                    <div id="part3"><div class="intro"><p>Intro5</p></div></div>
+                    <div id="part4"><div class="intro"><p>Intro6</p></div></div>
+                </div>
+                <div class="td"></div>
+            </div>
+            <div class="tr">
+                <div class="td" id="img5"><img src="img/Team/16.jpg"><div class="intro"><p>Intro7</p></div></div>
+                <div class="td"></div>
+                <div class="td" id="img6"><img src="img/Team/5.jpg"><div class="intro"><p>Intro8</p></div></div>
+            </div>
+            <div class="tr">
+                <div class="td"></div>
+                <div class="td" id="img7">
+                    <img src="img/Team/12.jpg">
+                    <div id="part5"><div class="intro"><p>Intro9Intro9Intro 9Intro9Intro9Intr o9Intr o9Intr o9Intro9Int ro9Intro 9Intro9I ntro9Int ro9Int ro 9Intro9 Intr o9 Int ro9In tro9  Intr o9Intr o9 Intro 9Intro9Intr o9Int ro9Int ro9Int ro9Int ro9Intro9Intro9 Intro 9Intro9I ntro9In tro9Intro9In tro 9Intro 9Intr o9Intro9Int ro9In tro9Int ro9In tro9</p></div></div>
+                    <div id="part6"><div class="intro"><p>Intro10</p></div></div>
+                    <div id="part7"><div class="intro"><p>Intro11</p></div></div>
+                </div>
+                <div class="td"></div>
+            </div>
+            <div class="tr">
+                <div class="td"></div>
+                <div class="td" id="img8">
+                    <img src="img/Team/15.jpg">
+                    <div id="part8"><div class="intro"><p>Intro12</p></div></div>
+                </div>
+                <div class="td"></div>
+            </div>
+            <div class="tr">
+                <div class="td"></div>
+                <div class="td"></div>
+                <div class="td"></div>
+            </div>
+            <div class="tr">
+                <div class="td"></div>
+                <div class="td"></div>
+                <div class="td"></div>
+            </div>
+            <div class="tr">
+                <div class="td"></div>
+                <div class="td"></div>
+                <div class="td"></div>
+            </div>
+        </div>
+        <div id="professors" class="mainText">
+            <div class="tr">
+                <div class="td" id="img9"><img src="img/Team/18.jpg" alt="">
+                    <div class="intro">Intro13</div></div>
+                <div class="td"></div>
+                <div class="td" id="img10"><img src="img/Team/19.jpg" alt="">
+                    <div class="intro">Intro14</div></div>
+            </div>
+            <div class="tr">
+                <div class="td" id="img11"><img src="img/Team/20.jpg" alt="">
+                    <div class="intro">Intro15</div></div>
+                <div class="td"></div>
+                <div class="td" id="img12"><img src="img/Team/21.jpg" alt="">
+                    <div class="intro">Intro16</div></div>
+            </div>
+        </div>
     </div>
 
     <div id="footer">
@@ -69,14 +146,14 @@
     <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>-->
     <script>
         /*口号*/
-        let options = {
-            strings: ["We can put our slogan here", "Or other things to be said"],
-            typeSpeed: 100,
-            loop: true,
-            startDelay: 100,
-            backSpeed: 50
-        };
-        let typed = new Typed("#slogan", options);
+        // let options = {
+        //     strings: ["We can put our slogan here", "Or other things to be said"],
+        //     typeSpeed: 100,
+        //     loop: true,
+        //     startDelay: 100,
+        //     backSpeed: 50
+        // };
+        // let typed = new Typed("#slogan", options);
 
         /*开始*/
         $('#start').click(function () {
